infrastructure/v2-secure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istioapp
  labels:
    istio-injection: enabled
