infrastructure/v2-secure/peerauthpolicy.yaml

# Enforces strict mutual TLS, meaning all traffic must be encrypted and authenticated using Istio-issued certificates.
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istioapp
spec:
  mtls:
    mode: STRICT
